2007-06-12  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin.

        Use correct size for BITMAPINFOHEADER -- whoops.

        * win/WebIconDatabase.cpp:
        (createDIB):
        (WebIconDatabase::getOrCreateDefaultIconBitmap):

2007-06-10  David Hyatt  <hyatt@apple.com>

        Fix for bug 14037, make sure respondsToSelector does the write thing
        when invoked on a WebKit plugin's container view.

        Reviewed by Mark Rowe

        * Plugins/WebKitPluginContainerView.mm:
        (-[WebKitPluginContainerView respondsToSelector:]):

2007-06-08  John Sullivan  <sullivan@apple.com>

        * WebView/WebViewPrivate.h:
        Added a FIXME

2007-06-07  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Tristan.
        
        <rdar://problem/5250997> A crash occurs when selecting Undo Typing for a page that has been closed in tab

        * WebView/WebView.mm:
        (-[WebView _clearUndoRedoOperations]): Added.
        * WebView/WebViewPrivate.h:

2007-06-07  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam "The Intern" Weinig.
        
        Don't be overzealous with the input checks, firstRectForCharacterRange
        can be determined even when there is not an active editable region.
        
        This unbreaks editing/input/range-for-empty-document which was broken
        by aforementioned overzealousness. 

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView firstRectForCharacterRange:]):

2007-06-07  Oliver Hunt  <oliver@apple.com>

        Reviewed by Justin.
        
        Add checks to make sure we don't try to create, use
        or return invalid ranges to TSM when it calls us despite
        not currently being in an editable region.

        * WebView/WebHTMLView.mm:
        (isTextInput):
        (-[WebHTMLView textStorage]):
        (-[WebHTMLView firstRectForCharacterRange:]):
        (-[WebHTMLView selectedRange]):
        (-[WebHTMLView attributedSubstringFromRange:]):
